--- a/myapp/templates/diary_detail.html
+++ b/myapp/templates/diary_detail.html
@@ -10,6 +10,8 @@
     <p>{{ diary.date }}</p>
     <p>{{ diary.title }}</p>
     <p>{{ diary.text }}</p>
-    <a href="{% url 'diary:index' %}">戻る</a>
+    <a href= "{% url 'diary:diary_update' diary.pk %}">編集</a>
+    <a href= "{% url 'diary:diary_delete' diary.pk %}">削除</a>
+    <a href= "{% url 'diary:index' %}">戻る</a>
 </body>
 </html>
