--- a/myapp/templates/diary_create_complete.html
+++ b/myapp/templates/diary_create_complete.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    {% comment %} <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> {% endcomment %}
-    <title>Myapp</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
     <p>日記の投稿が完了しました！</p>
     <a href="{% url 'diary:index' %}">トップへ戻る</a>
-</body>
-</html>
+{% endblock %}
