--- a/myapp/templates/diary_create.html
+++ b/myapp/templates/diary_create.html
@@ -1,16 +1,21 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    {% comment %} <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> {% endcomment %}
-    <title>Myapp</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load widget_tweaks %}
+{% block content %}
+    <h1>日記の作成</h1>
     <form action='' method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">投稿</button>
+        <div class="form-group">
+            <label>{{ form.date.label }}</label>
+            {{ form.date | add_class:'form-control col-2' }}
+        </div>
+        <div class="form-group">
+            <label>{{ form.title.label }}</label>
+            {{ form.title | add_class:'form-control col-2' }}
+        </div>
+        <div class="form-group">
+            <label>{{ form.text.label }}</label>
+            {{ form.text | add_class:'form-control col-2' }}
+        </div>
+        <button type="submit" class='form-control col-1' >投稿</button>
     </form>
-</body>
-</html>
+{% endblock %}
