--- a/myapp/templates/diary_detail.html
+++ b/myapp/templates/diary_detail.html
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        {% comment %} <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> {% endcomment %}
-        <title>Myapp</title>
-    </head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
     <p>{{ diary.date }}</p>
     <p>{{ diary.title }}</p>
     <p>{{ diary.text }}</p>
     <a href= "{% url 'diary:diary_update' diary.pk %}">編集</a>
     <a href= "{% url 'diary:diary_delete' diary.pk %}">削除</a>
     <a href= "{% url 'diary:index' %}">戻る</a>
-</body>
-</html>
+{% endblock %}
