--- a/myapp/templates/diary_update.html
+++ b/myapp/templates/diary_update.html
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    {% comment %} <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> {% endcomment %}
-    <title>Myapp</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
     <h1>日記の編集</h1>
     <form action='' method='post'>
         {% csrf_token %}
         {{ form.as_p }}
         <input type='submit' value='保存'>
     </form>
-</body>
-</html>
+{% endblock %}
